force-app/main/default/objects/OAR_Project_Tracker__c/OAR_Project_Tracker__c.object-meta.xml
<CustomObject>
    <description>Junction object between OARs and Projects</description>
    <label>OAR - Project Tracker</label>
    <nameField>
        <displayFormat>OPT-{0000}</displayFormat>
        <label>OAR - Project Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAR - Projects Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>