force-app/main/default/objects/OAR_Project_Tracker__c/fields/OAR_Description__c.field-meta.xml
<CustomField>
    <fullName>OAR_Description__c</fullName>
    <formula>Option_Approval_Request__r.Option_Request_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OAR Description</label>
    <type>Text</type>
</CustomField>