force-app/main/default/objects/OAR_Project_Tracker__c/fields/Option_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Option_Approval_Request__c</fullName>
    <label>Option Approval Request</label>
    <referenceTo>Option_Approval_Request__c</referenceTo>
    <relationshipLabel>OAR - Projects Tracker</relationshipLabel>
    <relationshipName>OAR_Projects_Tracker</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>