force-app/main/default/objects/OAR_Project_Tracker__c/fields/Product_Strategy_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Strategy_Status__c</fullName>
    <formula>TEXT ( Option_Approval_Request__r.OAR_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Strategy Status</label>
    <type>Text</type>
</CustomField>