force-app/main/default/objects/OAR_Project_Tracker__c/fields/Project_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Project_Tracker__c</fullName>
    <label>Project Tracker</label>
    <referenceTo>Project_Tracker__c</referenceTo>
    <relationshipLabel>OAR - Projects Tracker</relationshipLabel>
    <relationshipName>OAR_Projects_Tracker</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>