force-app/main/default/objects/OAR_Project_Tracker__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <formula>Option_Approval_Request__r.Request_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>