force-app/main/default/objects/OAR_Project_Tracker__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <formula>Option_Approval_Request__r.Sales_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order</label>
    <type>Text</type>
</CustomField>